--- a/site/web/app/themes/nybc-theme/src/sass/_section-quotes.scss
+++ b/site/web/app/themes/nybc-theme/src/sass/_section-quotes.scss
@@ -8,6 +8,7 @@
 /**------------------------*/
 .quotes-img {
 	display: block;
+	height: 100%;
 	padding-bottom: 108.271%;
 	position: relative;
 	width: 100%;
@@ -31,7 +32,7 @@
 		left: 0;
 		position: absolute;
 		top: 0;
-		width: 0.8rem;
+		width: 0.4rem;
 		z-index: 1;
 	}
 
