--- a/site/web/app/themes/nybc-theme/src/sass/_section-search-results.scss
+++ b/site/web/app/themes/nybc-theme/src/sass/_section-search-results.scss
@@ -89,7 +89,7 @@
 		color: $color-primary-base2-20;
 		font-size: 1.6rem;
 		font-weight: 900;
-		letter-spacing: 0.06em;
+		letter-spacing: 0;
 		line-height: 1.25em;
 		text-transform: uppercase;
 	}
@@ -180,7 +180,6 @@
 
 		.tagline {
 			font-size: 1.4rem;
-			letter-spacing: 0.02em;
 			line-height: 1.29em;
 		}
 	}
