--- a/site/web/app/themes/nybc-theme/src/sass/_swiper-custom.scss
+++ b/site/web/app/themes/nybc-theme/src/sass/_swiper-custom.scss
@@ -196,7 +196,7 @@
 		color: #737373;
 		font-size: 12px;
 		font-weight: 500;
-		letter-spacing: 0.05em;
+		letter-spacing: 0;
 		line-height: 1em;
 		text-align: center;
 		width: auto;
