--- a/site/web/app/themes/nybc-theme/src/sass/_typography.scss
+++ b/site/web/app/themes/nybc-theme/src/sass/_typography.scss
@@ -655,21 +655,21 @@ h6,
 h1,
 .h1 {
 	font-size: 5.4rem;
-	letter-spacing: -0.05em;
+	letter-spacing: 0;
 	line-height: 1.22em;
 }
 
 h2,
 .h2 {
 	font-size: 4.8rem;
-	letter-spacing: -0.06em;
+	letter-spacing: 0;
 	line-height: 1.17em;
 }
 
 h3,
 .h3 {
 	font-size: 3.6rem;
-	letter-spacing: -0.02em;
+	letter-spacing: 0;
 	line-height: 1.28em;
 }
 
@@ -682,14 +682,14 @@ h4,
 h5,
 .h5 {
 	font-size: 2.4rem;
-	letter-spacing: -0.02em;
+	letter-spacing: 0;
 	line-height: 1.25em;
 }
 
 h6,
 .h6 {
 	font-size: 1.6rem;
-	letter-spacing: 0.06em;
+	letter-spacing: 0;
 	line-height: 1.25em;
 }
 
